--- a/src/main/java/ru/hogwarts/schoolloohcs/HzChtoEto.html
+++ b/src/main/java/ru/hogwarts/schoolloohcs/HzChtoEto.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <center>
-    <p>Привет, мир!</p>
+    <p>Привет, мир! Хочу совместить бек и фронт</p>
 </center>
 <body>
 </body>
